[package]
name = "bp-ecdsa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bellpepper = { git = "https://github.com/varunthakore/bellpepper.git" }
bellpepper-core = { git = "https://github.com/varunthakore/bellpepper.git" }
ff = "0.13.0"
crypto-bigint = "0.5.0"

[dev-dependencies]
halo2curves = "0.4.0"
rand = "0.8.5"
rand_core = "0.6.4"
rand_xorshift = "0.3.0"
